<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".GeoLogActivity">

    <TextView
        android:id="@+id/geofenceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/configNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/config_name"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/geofenceTextView" />

    <Button
        android:id="@+id/toggleGeofenceServiceButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="@id/configNameTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="toggleGeoLocationService"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/log_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/back_border"
        app:layout_constraintBottom_toTopOf="@+id/changeConfigButton"
        app:layout_constraintTop_toBottomOf="@id/configNameTextView" />

    <Button
        android:id="@+id/changeConfigButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_configuration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="testFun"/>

    <Button
        android:id="@+id/clearLogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_logs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="clearLogsButtonClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>